--- a/client/index.html
+++ b/client/index.html
@@ -23,9 +23,9 @@
     <script>
       const app = document.getElementById('app');
       const urlParams = new URLSearchParams(window.location.search);
-      if (urlParams.has('gameId')) {
-        const gameId = urlParams.get('gameId');
-        app.setAttribute('gameId', gameId);
+      if (urlParams.has('gameCode')) {
+        const gameId = urlParams.get('gameCode');
+        app.setAttribute('gameCode', gameCode);
       }
     </script>
   </body>
