--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,11 @@
     <script type="module" src="js/app-main.js"></script>
     <style>
       html {
+        box-sizing: border-box;
         height: 100%;
+      }
+      *, *:before, *:after {
+        box-sizing: inherit;
       }
       body {
         height: 100%;
