--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <meta name="Description" content="Multi-player game lobby interface">
-    <meta name="theme-color" content="#3367D6">
-    <title>Multi-player lobby</title>
+    <meta name="Description" content="Waste management game">
+    <title>Waste management game</title>
     <script type="module" src="js/app-main.js"></script>
     <style>
       html {
