--- a/client/debug.html
+++ b/client/debug.html
@@ -5,6 +5,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <meta name="Description" content="Waste management game">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Waste management game (debug)</title>
     <script type="module" src="js/debug-client.js"></script>
     <style>
