Fix joining by game URL

--- a/client/client.html
+++ b/client/client.html
@@ -29,7 +29,7 @@
       const urlParams = new URLSearchParams(window.location.search);
       if (urlParams.has('gameCode')) {
         const gameCode = urlParams.get('gameCode');
-        app.setAttribute('gameCode', gameCode);
+        app.setAttribute('joinCode', gameCode);
       }
     </script>
   </body>
